[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/offline_popup.gd" id="1"]

[node name="OfflinePopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -100.0
offset_right = 180.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "üéâ Ho≈ü Geldin Geri!"
horizontal_alignment = 1

[node name="TimeLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "‚è± Uzakta ge√ßen s√ºre: ..."
horizontal_alignment = 1

[node name="EarningsLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
text = "üí∞ +0 Coin kazandƒ±n!"
horizontal_alignment = 1

[node name="CollectBtn" type="Button" parent="Margin/VBox"]
layout_mode = 2
text = "TOPLA!"
